--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -2,8 +2,8 @@
 $text-light: #fff;
 $text-dark: #161718;
 $main-color: #dcb08b;
-$secondary-color: rgba(0, 59, 39, 0.7);
-$ternary-color: rgba(0, 99, 65, 0.8);
+$secondary-color: #084d35;
+$ternary-color: #0c8a5e;
 
 // font
 $font-size: 16px;
